Bump Java 23 -> 24